@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.8
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed that the stunning effect of Normal worm spit was buffed.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.7
 Date: 2025-05-02
